--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint:check": "biome lint --error-on-warnings .",
+    "lint:safefix": "biome lint --write .",
+    "lint:next": "next lint",
+    "format:check": "biome format .",
+    "format": "biome format --write ."
   },
   "dependencies": {
     "react": "^19.0.0",
@@ -14,11 +18,12 @@
     "next": "15.1.5"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@biomejs/biome": "1.9.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
