--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "drizzle:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.4.2",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
+    "drizzle-zod": "^0.6.1",
+    "hono": "^4.6.17",
     "next": "15.1.5",
     "pg": "^8.13.1",
     "react": "^19.0.0",
