--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.2",
-    "@trigger.dev/sdk": "^3.3.12",
+    "@trigger.dev/sdk": "3.3.11",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@trigger.dev/build": "^3.3.12",
+    "@trigger.dev/build": "3.3.11",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
