--- a/package.json
+++ b/package.json
@@ -19,16 +19,22 @@
   },
   "dependencies": {
     "@hono/zod-validator": "^0.4.2",
+    "@radix-ui/react-slot": "^1.1.1",
     "@trigger.dev/sdk": "3.3.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "^0.6.1",
     "hono": "^4.6.17",
+    "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
