--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -11,7 +11,7 @@ jobs:
       packages: write
     steps:
       - uses: actions/checkout@v3
-      - name: Login to ghcr.io
+      - name: Login to registry
         uses: docker/login-action@v2
         with:
           registry: ${{ secrets.REGISTRY }}
@@ -25,6 +25,8 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: ${{ secrets.REGISTRY }}/${{ secrets.IMAGE_NAME }}:latest
-      - name: Deploy to Coolify
+          build-args: |
+            SKIP_ENV_CHECK=true
+      - name: Trigger deploy on Coolify
         run: |
           curl --request GET '${{ secrets.COOLIFY_WEBHOOK }}' --header 'Authorization: Bearer ${{ secrets.COOLIFY_TOKEN }}'
