--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,4 +36,4 @@ jobs:
           TRIGGER_ACCESS_TOKEN: ${{ secrets.TRIGGER_ACCESS_TOKEN }}
           TRIGGER_API_URL: ${{ secrets.TRIGGER_API_URL }}
         run: |
-          npx trigger.dev@latest deploy --skip-update-check --self-hosted --push --namespace ${{ secrets.REGISTRY_USER }} --registry ${{ secrets.REGISTRY }}
+          npx trigger.dev@3.3.11 deploy --skip-update-check --self-hosted --push --namespace ${{ secrets.REGISTRY_USER }} --registry ${{ secrets.REGISTRY }}
