--- a/package.json
+++ b/package.json
@@ -18,21 +18,24 @@
     "drizzle:studio": "drizzle-kit studio"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.2",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@tanstack/react-query": "^5.66.0",
     "@trigger.dev/sdk": "3.3.11",
+    "@trpc/client": "^11.0.0-rc.730",
+    "@trpc/next": "^11.0.0-rc.730",
+    "@trpc/react-query": "^11.0.0-rc.730",
+    "@trpc/server": "^11.0.0-rc.730",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "^0.6.1",
-    "hono": "^4.6.17",
     "lucide-react": "^0.474.0",
     "maplibre-gl": "^5.1.0",
     "next": "15.1.5",
