--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "^0.6.1",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
     "next": "15.1.5",
+    "nuqs": "^2.3.2",
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-map-gl": "8.0.0-beta.1",
+    "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
@@ -65,5 +67,8 @@
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
+  },
+  "overrides": {
+    "react-is": "^19.0.0"
   }
 }
