--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "pg": "^8.13.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1",
     "react-map-gl": "8.0.0-beta.1",
     "recharts": "^2.15.1",
     "tailwind-merge": "^2.6.0",
