--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -1,15 +1,30 @@
 {
-  "name": "@repo/db",
+  "name": "db",
   "type": "module",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "drizzle:migrate": "drizzle-kit migrate",
+    "drizzle:generate": "drizzle-kit generate",
+    "drizzle:push": "drizzle-kit push",
+    "drizzle:pull": "drizzle-kit pull",
+    "drizzle:studio": "drizzle-kit studio"
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "exports": {
+    ".": "./src/index.ts"
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
-    "drizzle-kit": "^0.30.2"
+    "drizzle-kit": "^0.30.2",
+    "typescript": "^5"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "drizzle-orm": "^0.38.4",
-    "drizzle-zod": "^0.6.1"
+    "drizzle-zod": "^0.6.1",
+    "zod": "^3.24.1"
   }
 }
