--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,13 +1,20 @@
 {
-    "extends": "@repo/typescript-config/base.json",
-    "compilerOptions": {
-        "outDir": "dist",
-    },
+    "extends": "@repo/typescript-config/nextjs.json",
     "include": [
-        "src"
+        "**/*.ts",
+        "**/*.tsx"
     ],
     "exclude": [
-        "node_modules",
-        "dist"
+        "dist",
+        "build",
+        "node_modules"
     ],
+    "compilerOptions": {
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ]
+        }
+    }
 }
