--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NODE_OPTIONS=--loader=ts-node/esm ts-node src/index.ts",
+    "dev": "ts-node src/index.ts --watch",
     "build": "tsc",
     "start": "node dist/index.js"
   },
   "dependencies": {
     "@repo/db": "workspace:*",
     "@repo/sigae": "workspace:*",
+    "@sentry/node": "^9.8.0",
+    "dotenv": "^16.4.7",
+    "dotenv-expand": "^12.0.1",
     "drizzle-zod": "^0.6.1",
     "node-cron": "^3.0.3",
     "zod": "^3.24.1"
