--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node src/index.ts --watch",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
@@ -15,6 +15,7 @@
     "dotenv-expand": "^12.0.1",
     "drizzle-zod": "^0.6.1",
     "node-cron": "^3.0.3",
+    "tsx": "^4.19.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
