--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -16,6 +16,7 @@
     "drizzle-zod": "^0.6.1",
     "node-cron": "^3.0.3",
     "tsx": "^4.19.2",
+    "winston": "^3.17.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
