--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "build": "tsc",
+    "build": "tsup",
     "start": "node dist/index.js"
   },
   "dependencies": {
@@ -25,6 +25,7 @@
     "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
+    "tsup": "^8.4.0",
     "typescript": "^5"
   }
 }
