--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "@repo/db": "workspace:*",
-    "@repo/sigae": "workspace:*",
+    "@bomberoscr/db": "workspace:*",
+    "@bomberoscr/sigae": "workspace:*",
     "@sentry/node": "^9.8.0",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
@@ -20,7 +20,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/node-cron": "^3.0.11",
     "nodemon": "^3.1.9",
