--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,7 +19,7 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@repo/db": "workspace:*",
+    "@bomberoscr/db": "workspace:*",
     "@tanstack/react-query": "^5.66.0",
     "@trpc/client": "^11.0.0-rc.730",
     "@trpc/next": "^11.0.0-rc.730",
@@ -48,7 +48,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
+    "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
     "@types/react": "^19",
