--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@bomberoscr/db": "workspace:*",
     "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-collapsible": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.6",
@@ -19,12 +20,12 @@
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
-    "@bomberoscr/db": "workspace:*",
     "@tanstack/react-query": "^5.66.0",
     "@trpc/client": "^11.0.0-rc.730",
     "@trpc/next": "^11.0.0-rc.730",
     "@trpc/react-query": "^11.0.0-rc.730",
     "@trpc/server": "^11.0.0-rc.730",
+    "@vercel/og": "^0.6.8",
     "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
