--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,10 +16,11 @@
     "@radix-ui/react-popover": "^1.1.5",
     "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.5",
-    "@radix-ui/react-separator": "^1.1.1",
-    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@tanstack/react-query": "^5.66.0",
     "@trpc/client": "^11.0.0-rc.730",
     "@trpc/next": "^11.0.0-rc.730",
@@ -32,6 +33,7 @@
     "cmdk": "^1.0.4",
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.6.1",
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
