--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "dotenv-expand": "^12.0.1",
+    "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.6.1",
     "zod": "^3.24.1"
   }
