--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "build:turbo": "next build --turbopack",
     "start": "next start"
   },
   "dependencies": {
@@ -38,11 +39,11 @@
     "lucide-react": "^0.475.0",
     "maplibre-gl": "^5.1.0",
     "motion": "^12.6.2",
-    "next": "15.1.5",
+    "next": "15.3.0",
     "nuqs": "^2.3.2",
     "pg": "^8.13.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-intersection-observer": "^9.15.1",
     "react-map-gl": "8.0.0-beta.1",
     "recharts": "^2.15.1",
@@ -55,8 +56,8 @@
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^20",
     "@types/pg": "^8.11.10",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "19.1.1",
+    "@types/react-dom": "19.1.2",
     "drizzle-kit": "^0.30.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
@@ -67,5 +68,11 @@
     "react-is": "^19.0.0",
     "@radix-ui/react-dismissable-layer": "^1.0.5",
     "@radix-ui/react-focus-scope": "^1.0.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.1",
+      "@types/react-dom": "19.1.2"
+    }
   }
 }
