--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
     "maplibre-gl": "^5.1.0",
     "motion": "^12.6.2",
     "next": "15.3.0",
+    "next-themes": "^0.4.6",
     "nuqs": "^2.3.2",
     "pg": "^8.13.1",
     "react": "19.1.0",
