--- a/package.json
+++ b/package.json
@@ -1,9 +1,6 @@
 {
   "private": true,
-  "workspaces": [
-    "apps/*",
-    "packages/*"
-  ],
+  "workspaces": ["apps/*", "packages/*"],
   "scripts": {
     "lint:check": "biome lint --error-on-warnings .",
     "lint:safefix": "biome lint --write .",
