--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "private": true,
-  "workspaces": ["apps/*", "packages/*"],
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
     "lint:check": "biome lint --error-on-warnings .",
     "lint:safefix": "biome lint --write .",
@@ -18,6 +21,6 @@
     "node": ">=18"
   },
   "dependencies": {
-    "drizzle-orm": "^0.40.1"
+    "drizzle-orm": "^0.41.0"
   }
 }
