--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,85 +10,85 @@
   },
   "dependencies": {
     "@bomberoscr/db": "workspace:*",
-    "@hookform/resolvers": "^5.0.1",
-    "@phosphor-icons/react": "^2.1.7",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
-    "@tanstack/react-query": "^5.66.0",
-    "@trpc/client": "^11.0.0-rc.730",
-    "@trpc/next": "^11.0.0-rc.730",
-    "@trpc/react-query": "^11.0.0-rc.730",
-    "@trpc/server": "^11.0.0-rc.730",
+    "@hookform/resolvers": "^5.1.1",
+    "@phosphor-icons/react": "^2.1.10",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-context-menu": "^2.2.15",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-menubar": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tanstack/react-query": "^5.81.5",
+    "@trpc/client": "^11.4.3",
+    "@trpc/next": "^11.4.3",
+    "@trpc/react-query": "^11.4.3",
+    "@trpc/server": "^11.4.3",
     "@vercel/og": "^0.6.8",
-    "babel-plugin-react-compiler": "^19.0.0-beta-714736e-20250131",
+    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "dotenv-expand": "^12.0.1",
+    "dotenv": "^16.6.1",
+    "dotenv-expand": "^12.0.2",
     "drizzle-orm": "^0.41.0",
     "drizzle-zod": "^0.6.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.487.0",
-    "maplibre-gl": "^5.1.0",
-    "motion": "^12.6.2",
+    "maplibre-gl": "^5.6.0",
+    "motion": "^12.19.2",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
-    "nuqs": "^2.3.2",
-    "pg": "^8.13.1",
+    "nuqs": "^2.4.3",
+    "pg": "^8.16.3",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.55.0",
-    "react-intersection-observer": "^9.15.1",
+    "react-hook-form": "^7.58.1",
+    "react-intersection-observer": "^9.16.0",
     "react-map-gl": "8.0.0-beta.1",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.2",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.2.0",
+    "react-resizable-panels": "^2.1.9",
+    "recharts": "^2.15.4",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
-    "@tailwindcss/postcss": "^4.1.3",
-    "@types/node": "^20",
-    "@types/pg": "^8.11.10",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@types/node": "^20.19.1",
+    "@types/pg": "^8.15.4",
     "@types/react": "19.1.1",
     "@types/react-dom": "19.1.2",
-    "drizzle-kit": "^0.30.2",
-    "postcss": "^8",
-    "tailwindcss": "^4.1.3",
-    "tsx": "^4.19.2",
-    "typescript": "^5"
+    "drizzle-kit": "^0.30.6",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
+    "tsx": "^4.20.3",
+    "typescript": "^5.8.3"
   },
   "overrides": {
     "react-is": "^19.0.0",
