--- a/apps/sync-v2/tsconfig.json
+++ b/apps/sync-v2/tsconfig.json
@@ -4,19 +4,12 @@
     "module": "NodeNext",
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     "outDir": "./dist",
     "declaration": true,
     "declarationDir": "./dist"
   },
-  "include": [
-    "**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
