--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,54 +38,51 @@
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-toggle-group": "^1.1.10",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-table": "^8.21.3",
     "@trpc/client": "^11.4.3",
     "@trpc/next": "^11.4.3",
     "@trpc/react-query": "^11.4.3",
     "@trpc/server": "^11.4.3",
-    "@vercel/og": "^0.6.8",
-    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "@vercel/og": "^0.7.2",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.6.1",
+    "dotenv": "^17.2.0",
     "dotenv-expand": "^12.0.2",
-    "drizzle-orm": "^0.41.0",
-    "drizzle-zod": "^0.6.1",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.487.0",
-    "maplibre-gl": "^5.6.0",
-    "motion": "^12.19.2",
-    "next": "15.3.0",
+    "lucide-react": "^0.525.0",
+    "maplibre-gl": "^5.6.1",
+    "motion": "^12.23.6",
+    "next": "15.4.2",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.2",
     "react": "19.1.0",
-    "react-day-picker": "8.10.1",
+    "react-day-picker": "9.8.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.58.1",
+    "react-hook-form": "^7.60.0",
     "react-intersection-observer": "^9.16.0",
-    "react-map-gl": "8.0.0-beta.1",
-    "react-resizable-panels": "^2.1.9",
-    "recharts": "^2.15.4",
-    "sonner": "^2.0.5",
+    "react-map-gl": "8.0.4",
+    "react-resizable-panels": "^3.0.3",
+    "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^3.25.67"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
     "@tailwindcss/postcss": "^4.1.11",
-    "@types/node": "^20.19.1",
+    "@types/node": "^24.0.15",
     "@types/pg": "^8.15.4",
-    "@types/react": "19.1.1",
-    "@types/react-dom": "19.1.2",
-    "drizzle-kit": "^0.30.6",
+    "@types/react": "19.1.8",
+    "@types/react-dom": "19.1.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "tsx": "^4.20.3",
@@ -98,8 +95,8 @@
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "19.1.1",
-      "@types/react-dom": "19.1.2"
+      "@types/react": "19.1.8",
+      "@types/react-dom": "19.1.6"
     }
   }
 }
