--- a/packages/sync-domain/tsconfig.json
+++ b/packages/sync-domain/tsconfig.json
@@ -1,20 +1,11 @@
 {
-    "extends": "@bomberoscr/typescript-config/nextjs.json",
-    "include": [
-        "**/*.ts",
-        "**/*.tsx"
-    ],
-    "exclude": [
-        "dist",
-        "build",
-        "node_modules"
-    ],
-    "compilerOptions": {
-        "baseUrl": ".",
-        "paths": {
-            "@bomberoscr/sync-domain/*": [
-                "./src/*"
-            ]
-        }
+  "extends": "@bomberoscr/typescript-config/nextjs.json",
+  "include": ["**/*.ts", "**/*.tsx"],
+  "exclude": ["dist", "build", "node_modules"],
+  "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@bomberoscr/sync-domain/*": ["./src/*"]
     }
+  }
 }
