--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@bomberoscr/db": "workspace:*",
+    "@bomberoscr/lib": "workspace:*",
     "@hookform/resolvers": "^5.1.1",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.11",
@@ -69,7 +70,7 @@
     "react-intersection-observer": "^9.16.0",
     "react-map-gl": "8.0.4",
     "react-resizable-panels": "^3.0.3",
-    "recharts": "^3.1.0",
+    "recharts": "^2.15.4",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
