chore: add pnpm catalogs, pin zod to ^4.0.5, update next canary

--- a/apps/sync-v2/package.json
+++ b/apps/sync-v2/package.json
@@ -20,7 +20,7 @@
     "node-cron": "^3.0.3",
     "tsx": "^4.20.3",
     "winston": "^3.17.0",
-    "zod": "^4.0.5"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
