--- a/apps/sync/package.json
+++ b/apps/sync/package.json
@@ -19,7 +19,7 @@
     "node-cron": "^3.0.3",
     "tsx": "^4.20.3",
     "winston": "^3.17.0",
-    "zod": "^3.25.67"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
