--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:turbo": "next dev --turbopack",
     "build": "next build",
     "build:turbo": "next build --turbopack",
     "start": "next start"
@@ -61,7 +62,7 @@
     "lucide-react": "^0.525.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.23.6",
-    "next": "15.5.1-canary.24",
+    "next": "15.5.1-canary.38",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
     "pg": "^8.16.3",
@@ -78,7 +79,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "^4.0.5"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
