--- a/packages/sigae/package.json
+++ b/packages/sigae/package.json
@@ -14,6 +14,6 @@
   "dependencies": {
     "dotenv": "^16.6.1",
     "dotenv-expand": "^12.0.2",
-    "zod": "^3.25.67"
+    "zod": "catalog:"
   }
 }
