--- a/packages/sync-domain/package.json
+++ b/packages/sync-domain/package.json
@@ -9,7 +9,7 @@
     "dotenv": "^16.4.7",
     "dotenv-expand": "^11.0.1",
     "neverthrow": "^8.2.0",
-    "zod": "^4.0.5"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
