--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "lint:check": "biome lint --error-on-warnings .",
     "lint:safefix": "biome lint --write .",
     "lint:next": "next lint",
-    "format:check": "biome format .",
-    "format": "biome format --write ."
+    "format:check": "biome check .",
+    "format": "biome check --write ."
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
