--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
     "@base-ui-components/react": "1.0.0-beta.6",
+    "@base-ui/react": "^1.0.0",
     "@bomberoscr/db": "workspace:*",
     "@bomberoscr/lib": "workspace:*",
     "@bomberoscr/sync-domain": "workspace:*",
