add new /estaciones directory index

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -20,6 +20,9 @@
     "@bomberoscr/sync-domain": "workspace:*",
     "@deck.gl/layers": "^9.1.14",
     "@deck.gl/mapbox": "^9.1.14",
+    "@dicebear/collection": "^9.2.4",
+    "@dicebear/converter": "^9.2.4",
+    "@dicebear/core": "^9.2.4",
     "@hookform/resolvers": "^5.2.2",
     "@phosphor-icons/react": "^2.1.10",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -68,14 +71,14 @@
     "mapbox-gl": "^3.17.0",
     "maplibre-gl": "^5.6.1",
     "motion": "^12.23.24",
-    "next": "16.0.7",
+    "next": "16.1.1",
     "next-themes": "^0.4.6",
     "nuqs": "^2.8.1",
     "pg": "^8.16.3",
     "radix-ui": "^1.4.3",
-    "react": "19.2.0",
+    "react": "19.2.3",
     "react-day-picker": "9.11.2",
-    "react-dom": "19.2.0",
+    "react-dom": "19.2.3",
     "react-hook-form": "^7.66.1",
     "react-intersection-observer": "^10.0.0",
     "react-map-gl": "8.1.0",
