--- a/apps/web/biome.json
+++ b/apps/web/biome.json
@@ -2,6 +2,6 @@
   "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "ignore": ["src/features/dashboard/homepage/data/costa_rica.json"]
+    "ignore": ["costa_rica.json"]
   }
 }
