--- a/biome.json
+++ b/biome.json
@@ -8,7 +8,7 @@
   },
   "files": {
     "ignoreUnknown": true,
-    "ignore": [".next*", "node_modules/*", ".turbo"]
+    "ignore": [".next*", "node_modules/*", ".turbo", "costa_rica.json"]
   },
   "formatter": {
     "enabled": true,
