--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -35,7 +35,7 @@
     "@bomberoscr/lib": "workspace:*",
     "dotenv": "^17.2.0",
     "dotenv-expand": "^12.0.2",
-    "drizzle-orm": "^0.44.3",
+    "drizzle-orm": "catalog:",
     "drizzle-zod": "^0.8.2",
     "zod": "catalog:"
   }
