--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,10 +5,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "node ./dist/src/index.js",
+    "start": "node ./dist/index.js",
     "typecheck": "tsc --noEmit",
     "test": "cross-env NODE_ENV=test vitest",
-    "build": "tsc && tsc-alias"
+    "build": "tsdown"
   },
   "dependencies": {
     "@bomberoscr/db": "workspace:*",
@@ -17,19 +17,20 @@
     "@scalar/hono-api-reference": "^0.9.13",
     "dotenv": "^17.2.1",
     "dotenv-expand": "^12.0.2",
+    "drizzle-orm": "catalog:",
     "hono": "^4.9.6",
     "hono-og": "^0.0.5",
     "hono-pino": "^0.10.1",
     "pino": "^9.7.0",
     "pino-pretty": "^13.1.1",
     "stoker": "2.0.1",
-    "zod": "^4.0.14"
+    "zod": "catalog:"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^24.2.0",
     "cross-env": "^10.0.0",
-    "tsc-alias": "^1.8.16",
+    "tsdown": "^0.9.7",
     "tsx": "^4.19.4",
     "typescript": "^5.8.3",
     "vitest": "^3.2.1"
