--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint:safefix": "pnpm --filter api --filter frontend run lint:fix",
     "lint:next": "next lint",
     "format:check": "pnpm --filter api --filter frontend run format:check",
-    "format": "pnpm --filter api --filter frontend run format"
+    "format": "pnpm --filter api --filter frontend run format",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@typescript/native-preview": "7.0.0-dev.20260111.1",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.2.7",
     "oxfmt": "^0.23.0",
     "oxlint": "^1.38.0",
     "turbo": "^2.5.4"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,json,jsonc,css,scss,md,mdx,html,yml,yaml}": "pnpm exec oxfmt"
   },
   "engines": {
     "node": ">=18"
