--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "node ./dist/index.js",
+    "start": "node ./dist/index.mjs",
     "typecheck": "tsc --noEmit",
     "test": "cross-env NODE_ENV=test vitest",
     "build": "tsdown",
@@ -35,10 +35,10 @@
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "25.0.6",
+    "@typescript/native-preview": "catalog:",
     "cross-env": "10.1.0",
     "tsdown": "0.19.0",
     "tsx": "4.21.0",
-    "typescript": "5.9.3",
     "vitest": "4.0.17"
   }
 }
