--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -51,11 +51,11 @@
     "@types/node": "^22.10.2",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
+    "@typescript/native-preview": "catalog:",
     "@vitejs/plugin-react": "^5.0.4",
     "babel-plugin-react-compiler": "^1.0.0",
     "jsdom": "^27.0.0",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5.7.2",
     "vite": "npm:rolldown-vite@7.3.1",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
