--- a/apps/sync-v2/package.json
+++ b/apps/sync-v2/package.json
@@ -46,12 +46,12 @@
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "^20.19.1",
     "@types/node-cron": "^3.0.11",
+    "@typescript/native-preview": "catalog:",
     "@vitest/ui": "^3.2.4",
     "jsdom": "^26.1.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "tsup": "^8.5.0",
-    "typescript": "^5.8.3",
     "vitest": "^3.2.4"
   }
 }
