--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -13,6 +13,6 @@
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
-    "typescript": "^5.8.3"
+    "@typescript/native-preview": "catalog:"
   }
 }
