--- a/packages/sync-domain/package.json
+++ b/packages/sync-domain/package.json
@@ -20,6 +20,6 @@
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
-    "typescript": "^5.8.3"
+    "@typescript/native-preview": "catalog:"
   }
 }
