--- a/.prettierignore
+++ b/.prettierignore
@@ -4,5 +4,7 @@ apps/frontend/src/routeTree.gen.ts
 apps/frontend/src/lib/api/
 apps/frontend/src/styles.css
 apps/frontend/dist/
+apps/frontend/src/data/costa_rica.json
+
 
 apps/api/dist/
