--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "3.966.0",
     "@bomberoscr/db": "workspace:*",
+    "@bomberoscr/lib": "workspace:*",
     "@bomberoscr/sync-domain": "workspace:*",
     "@hono/node-server": "1.19.8",
     "@hono/zod-openapi": "1.2.0",
