--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -31,6 +31,7 @@
     "@tanstack/router-plugin": "^1.132.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.561.0",
     "nitro": "latest",
     "nuqs": "^2.8.1",
