--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,7 +26,7 @@
     "@scalar/hono-api-reference": "0.9.32",
     "dotenv": "17.2.3",
     "dotenv-expand": "12.0.3",
-    "drizzle-orm": "catalog:",
+    "drizzle-orm": "^0.44.3",
     "hono": "4.11.3",
     "hono-og": "0.0.29",
     "hono-pino": "0.10.3",
@@ -34,12 +34,12 @@
     "pino": "10.1.1",
     "pino-pretty": "^13.1.3",
     "stoker": "2.0.1",
-    "zod": "catalog:"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
     "@types/node": "25.0.6",
-    "@typescript/native-preview": "catalog:",
+    "@typescript/native-preview": "^7.0.0-dev.20260127.1",
     "cross-env": "10.1.0",
     "tsdown": "0.19.0",
     "tsx": "4.21.0",
