--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -11,7 +11,7 @@
     "format:check": "oxfmt --check",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
-    "check": "pnpm run lint && pnpm run format:check",
+    "check": "bun run lint && bun run format:check",
     "openapi-ts": "openapi-ts"
   },
   "dependencies": {
@@ -39,7 +39,7 @@
     "tailwind-merge": "3.4.0",
     "tailwindcss": "4.1.18",
     "vite-tsconfig-paths": "6.0.5",
-    "zod": "catalog:"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@fontsource-variable/bricolage-grotesque": "5.2.10",
@@ -50,7 +50,7 @@
     "@types/node": "25.1.0",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
-    "@typescript/native-preview": "catalog:",
+    "@typescript/native-preview": "^7.0.0-dev.20260127.1",
     "@vitejs/plugin-react": "5.1.2",
     "babel-plugin-react-compiler": "1.0.0",
     "tw-animate-css": "1.4.0",
