--- a/packages/sigae/package.json
+++ b/packages/sigae/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "dotenv": "^16.6.1",
     "dotenv-expand": "^12.0.2",
-    "zod": "catalog:"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
