--- a/packages/sync-domain/package.json
+++ b/packages/sync-domain/package.json
@@ -16,10 +16,10 @@
     "dotenv": "^16.4.7",
     "dotenv-expand": "^11.0.1",
     "neverthrow": "^8.2.0",
-    "zod": "catalog:"
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@bomberoscr/typescript-config": "workspace:*",
-    "@typescript/native-preview": "catalog:"
+    "@typescript/native-preview": "^7.0.0-dev.20260127.1"
   }
 }
