refactor date ranges handling, tweak dev env

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "source.fixAll.oxc": "explicit"
   },
   "oxc.enable": true,
+  "oxc.typeAware": true,
   "[typescript]": {
     "editor.defaultFormatter": "oxc.oxc-vscode"
   },
