--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -9,13 +9,15 @@
     "test": "vitest run",
     "format": "oxfmt",
     "format:check": "oxfmt --check",
-    "lint": "oxlint",
-    "lint:fix": "oxlint --fix",
+    "lint": "oxlint --type-aware --tsconfig tsconfig.oxlint.json src",
+    "lint:fix": "oxlint --type-aware --tsconfig tsconfig.oxlint.json src --fix",
+    "typecheck": "oxlint --type-aware --type-check --tsconfig tsconfig.oxlint.json src",
     "check": "bun run lint && bun run format:check",
     "openapi-ts": "openapi-ts"
   },
   "dependencies": {
     "@base-ui/react": "1.1.0",
+    "@number-flow/react": "^0.5.11",
     "@phosphor-icons/react": "2.1.10",
     "@tailwindcss/vite": "4.1.18",
     "@tanstack/react-devtools": "0.9.4",
@@ -27,17 +29,21 @@
     "@tanstack/react-start": "1.157.18",
     "@tanstack/react-table": "8.21.3",
     "@tanstack/router-plugin": "1.157.18",
+    "@visx/group": "^3.12.0",
+    "@visx/responsive": "^3.12.0",
+    "@visx/shape": "^3.12.0",
     "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
+    "clsx": "^2.1.1",
+    "d3-shape": "^3.2.0",
     "date-fns": "^4.1.0",
     "lucide-react": "0.563.0",
-    "motion": "12.29.2",
+    "motion": "^12.34.0",
     "nitro": "3.0.1-alpha.2",
     "react": "19.2.4",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.4",
     "recharts": "3.7.0",
-    "tailwind-merge": "3.4.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss": "4.1.18",
     "vite-tsconfig-paths": "6.0.5",
     "zod": "^4.0.5"
@@ -48,6 +54,7 @@
     "@fontsource-variable/geist-mono": "5.2.7",
     "@hey-api/openapi-ts": "0.91.1",
     "@tanstack/devtools-vite": "0.5.0",
+    "@types/d3-shape": "^3.1.8",
     "@types/node": "25.1.0",
     "@types/react": "19.2.10",
     "@types/react-dom": "19.2.3",
