--- a/mprocs.yaml
+++ b/mprocs.yaml
@@ -1,5 +1,5 @@
 procs:
   api:
-    cmd: ["bun", "run", "--filter", "api", "--elide-lines=0", "dev"]
+    cmd: ["bun", "run", "--cwd", "apps/api", "dev"]
   frontend:
-    cmd: ["bun", "run", "--filter", "frontend", "--elide-lines=0", "dev"]
+    cmd: ["bun", "run", "--cwd", "apps/frontend", "dev"]
