--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -3,6 +3,7 @@ PORT=3000
 
 # Build-time: baked into the client bundle by Vite
 VITE_SERVER_URL=http://localhost:9999/bomberos/hono
+VITE_BASE=/bomberos
 VITE_MAPBOX_TOKEN=
 
 # Runtime: used server-side during SSR for internal API calls
