ci: add Mapbox token and server URL as build arguments in frontend workflow and Dockerfile

--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -52,6 +52,8 @@ jobs:
           platforms: linux/amd64
           build-args: |
             VITE_BASE=${{ vars.VITE_BASE || '/bomberos' }}
+            VITE_MAPBOX_TOKEN=${{ secrets.VITE_MAPBOX_TOKEN }}
+            VITE_SERVER_URL=${{ vars.VITE_SERVER_URL }}
           push: true
           tags: ${{ secrets.REGISTRY }}/${{ secrets.FRONTEND_IMAGE_NAME }}:latest
 
