--- a/apps/frontend/Dockerfile
+++ b/apps/frontend/Dockerfile
@@ -3,7 +3,11 @@ FROM oven/bun:1.3.9-alpine AS build
 WORKDIR /app
 
 ARG VITE_BASE=/bomberos
+ARG VITE_MAPBOX_TOKEN
+ARG VITE_SERVER_URL
 ENV VITE_BASE=${VITE_BASE}
+ENV VITE_MAPBOX_TOKEN=${VITE_MAPBOX_TOKEN}
+ENV VITE_SERVER_URL=${VITE_SERVER_URL}
 
 COPY . .
 
