feat: update API path and add sitemap functionality

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -1,7 +1,7 @@
 NODE_ENV=development
 PORT=9999
 LOG_LEVEL=debug
-API_URL=http://localhost:9999/bomberos/hono
+API_URL=http://localhost:9999/bomberos/api
 INTERNAL_API_URL=http://localhost:9999
 MAPBOX_API_KEY=
 
@@ -9,6 +9,7 @@ IMGPROXY_BASE_URL=http://localhost:8080
 IMGPROXY_KEY=
 IMGPROXY_SALT=
 IMGPROXY_TOKEN=
+SITEMAP_TOKEN=
 
 S3_ENDPOINT=http://localhost:9000
 S3_KEY_ID=
