feat: bump frontend and api versions, update API paths, and add sitemap routes

--- a/apps/frontend/.env.example
+++ b/apps/frontend/.env.example
@@ -2,9 +2,10 @@ NODE_ENV=development
 PORT=3000
 
 # Build-time: baked into the client bundle by Vite
-VITE_SERVER_URL=http://localhost:9999/bomberos/hono
+VITE_SERVER_URL=http://localhost:9999/bomberos/api
 VITE_BASE=/bomberos
 VITE_MAPBOX_TOKEN=
 
 # Runtime: used server-side during SSR for internal API calls
-SERVER_INTERNAL_URL=http://localhost:9999/bomberos/hono
+SERVER_INTERNAL_URL=http://localhost:9999/bomberos/api
+SITEMAP_TOKEN=
